<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AlaCarté</string>
    <string name="menu_settings">Settings</string>
    <string name="agregar_plato">Ver platos</string>
    <string name="lbPersona">Personas en la mesa</string>
    <string name="s_btnAgregar">Agregar</string>
    <string name="s_btnEliminar">Eliminar</string>
    <string name="s_btnCancelar">Cancelar</string>
    <string name="s_lblPlato">Nombre de Mesa</string>
    <string name="s_precio">0</string>
    <string name="s_btnFoto">Foto</string>
    <string name="s_nombreplato">Nombre del plato</string>
    <string name="s_servido">Servido</string>
   <!--  <string name="urlServidor">http://192.168.132.253/yii/cart/</string> -->
    <!-- <string name="domain">192.168.147.28</string> -->
    <string name="s_btnservido">Servido</string>
    <string name="s_enviar">Enviar</string>
    <string name="s_btnGuardar">Guardar</string>
    <string name="s_buscarplatos">Buscar platos...</string>
    <string name="s_Buscar">Buscar platos....</string>
    <string name="s_mesan">Mesa</string>
    <string name="s_cero">0</string>
    <string name="title_activity_login">AlaCarté</string>
    <string name="action_settings">Settings</string>
    <string name="S_usuario">Usuario</string>
    <string name="s_pass">Contraseña</string>
    <string name="s_autenticarse">Autenticarse</string>
	<string name="s_error_autenticarse">Nombre de usuario o contraseña incorrectos</string>
	<string name="s_ServirTodos">Servir Todos</string>
	<string name="s_Print">Imprimir</string>
</resources>